# okid

./: ..swiftdoc  ..swiftsourceinfo  .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.swift-docs  Dockerfile.swift-test  OkId.swiftmodule  Package.resolved  Package.swift  README.md  book.toml  build.rs  codebook.toml  generate-docs.sh  generate_swift_bindings.sh  index.ts  package.json  release-please-config.json  run-tests.sh  secret  swift-docker.sh  typedoc.json
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: devskim.yml  fuzz.yml  mdbook.yml  npm.yml  osv-scanner.yml  release-please.yml  rust.yml  swift.yml  test_secret.yml  typescript.yml
Sources/OkId/: OkId.swift  OkIdTypes.swift
Sources/OkId/Documentation.docc/: OkId.md
Sources/OkId/include/: okidFFI.h  okidFFI.modulemap
Tests/OkIdTests/: OkIdTests.swift
bindings/: BinaryType.ts  Digest.ts  OkId.ts
chunks/: Cargo.toml
docs/src/: SUMMARY.md  _playground.html  _tools.html  intro.md  playground.md  swift.md  tools.md  typescript.md
docs/swift/: index.html  metadata.json
docs/swift/index/: index.json
examples/: async_iterator_test.html  chunks_example.html  swift_example.swift  wasm_example.html
examples/pkg/: chunks.d.ts  chunks.js  chunks_bg.wasm  chunks_bg.wasm.d.ts  package.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
rust-build/: Package.swift
src/: binary_type.rs  blake3.rs  digest.rs  error.rs  fingerprint.rs  hmac.rs  lib.rs  macros.rs  main.rs  node.rs  node_id.rs  oid.rs  okid.rs  parse.rs  pub_key.rs  schema.rs  secret.rs  serde.rs  sha1.rs  sha2.rs  sha3.rs  size.rs  uint.rs  ulid.rs  uniffi_bindings.rs  uuid.rs  wasm.rs  wireformat.rs  worker.rs
src/snapshots/: dgst__binary_id_tests__display.snap  dgst__binary_id_tests__display_hello_world.snap
tests/: blake3.rs  bubblebabble.rs  hmac.rs  lib.rs  secret.rs
tests/snapshots/: lib__schema_serialization_works.snap
theme/: book.css
ts_test/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
xtask/: Cargo.toml
xtask/src/: main.rs
