[workspace]
members = [".", "xtask"]

[package]
name = "okid"
version = "0.19.1"
edition = "2021"
readme = "README.md"
description = "A library for generating double clickable ids"
license = "BSD-3-Clause"
keywords = ["double-click", "double-clickable", "id", "hash"]


[dependencies]
async-graphql = { version = "7.0.15", optional = true }
blake3 = { version = "1.6.1", optional = true, features = ["traits-preview"]}
bytes = { version = "1.10.1", features = ["serde"] }
getrandom = { version = "0.3.2", features = ["wasm_js"] }
digest = "0.10.7"
hex = { version = "0.4.3", features = ["serde"] }
okstd = "1.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = {version = "1.0.143", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }
ulid = { version = "1.2.1", optional = true, features = ["uuid"] }
utoipa = { version = "^5.4.0", optional = true }
uuid = { version = "1.18.0", optional = true, features = ["js", "v4"] }
zerocopy = { version = "0.8.26", features = ["derive"] }
wasm-bindgen = "0.2.100"
thiserror = "2.0.17"
iroh = { version = "0.92.0", default-features = false, optional = true }
bubblebabble = "0.1.2"
pkarr = { version = "4.0.0", optional = true }
ed25519-dalek = "2.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jetstream_wireformat = "9.1.0"
[target.'cfg(target_arch = "wasm32")'.dependencies]
jetstream_wireformat = { version = "9.1.0", default-features = false, features = [
    "std",
] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }


[features]
default = ["sha2", "sha3", "blake3", "uuid", "ulid"]
macro-diagnostics = []
sha1 = ["dep:sha1"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]
blake3 = ["dep:blake3"]
uuid = ["dep:uuid"]
ulid = ["dep:ulid"]
openapi = ["dep:utoipa", "json"]
json = ["serde_json"]
graphql = ["dep:async-graphql"]
pkarr = ["dep:pkarr"]
iroh = ["dep:iroh"]


[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }

[[bin]]
name = "oksecret"
path = "src/main.rs"


[lib]
name = "okid"
crate-type = ["cdylib", "rlib", "staticlib"]
