[workspace]
members = [".", "xtask","fuzz"]
exclude = []

[workspace.dependencies]
jetstream_wireformat = {version = "9.5.0", default-features = false}

[package]
name = "okid"
version = "0.25.0"
edition = "2021"
readme = "README.md"
description = "A library for generating double clickable ids"
license = "BSD-3-Clause"
keywords = ["double-click", "double-clickable", "id", "hash"]


[dependencies]
async-graphql = { version = "7.0.15", optional = true }
blake3 = { version = "1.6.1", optional = true, features = ["traits-preview"]}
bytes = { version = "1.10.1", features = ["serde"] }
getrandom = { version = "0.3.2", features = ["wasm_js"] }
digest = "0.10.7"
hex = { version = "0.4.3", features = ["serde"] }
okstd = "1.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = {version = "1.0.143", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }
ulid = { version = "1.2.1", optional = true, features = ["uuid"] }
utoipa = { version = "^5.4.0", optional = true }
uuid = { version = "1.18.0", optional = true, features = ["js", "v4"] }
zerocopy = { version = "0.8.26", features = ["derive"] }
wasm-bindgen = {version = "0.2.100", optional = true}
thiserror = "2.0.17"
iroh = { version = "0.93.2", default-features = false, optional = true }
bubblebabble = "0.1.2"
pkarr = { version = "5.0.0", optional = true }
ed25519-dalek = "2.2.0"
iroh-base = {version="0.93.2", optional = true}
worker = { version = "0.6.7", optional = true }
hmac = "0.12.1"
schemars = { version = "1.1.0", optional = true }
percent-encoding = "2.3.2"
js-sys = { version = "0.3.83", optional = true }
web-sys = { version = "0.3.83", optional = true, features = ["Url"] }
url = "2.5.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jetstream_wireformat = {workspace = true}
[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.6.7", optional = true }
jetstream_wireformat = { workspace = true, default-features = false, features = [
    "std",
] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[features]
default = ["sha2", "sha3", "blake3", "uuid", "ulid", "wasm"]
macro-diagnostics = []
sha1 = ["dep:sha1"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]
blake3 = ["dep:blake3"]
uuid = ["dep:uuid"]
ulid = ["dep:ulid"]
openapi = ["dep:utoipa", "json"]
json = ["serde_json"]
graphql = ["dep:async-graphql"]
pkarr = ["dep:pkarr"]
iroh = ["dep:iroh", "dep:iroh-base"]
worker = ["dep:worker"]
jsonschema = ["dep:schemars"]
wasm = ["dep:js-sys","dep:web-sys", "dep:wasm-bindgen"]

[dev-dependencies]
insta = { version = "1.42.2", features = ["filters", "yaml"] }

[[bin]]
name = "oksecret"
path = "src/main.rs"

[lib]
name = "okid"
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
cfg_aliases = "0.2.1"
